# Hum

./: .gitignore  CMakeLists.txt
include/: GameEngine.hpp  Sprite.hpp
src/: GameEngine.cpp  Sprite.cpp  main.cpp
